# cmyktool

./: .gitmodules  Makefile.am  NEWS  README  TODO  argyllsupport  cmtransformworker.h  cmyktool.cpp  cmyktool.desktop  cmyktool_core.cpp  cmyktool_core.h  cmyktypes.h  cmykuitab.cpp  cmykuitab.h  config.h.in  configure.ac  conversionopts.cpp  conversionopts.h  conversionoptsdialog.cpp  conversionoptsdialog.h  convertcmyk.cpp  decompose.cpp  deflatten.cpp  devicelink.cpp  devicelink.h  devicelinkdialog.cpp  devicelinkdialog.h  dialogs.cpp  dialogs.h  dltest.cpp  duotoner.cpp  duotoner.desktop  externalghostscript.h  hsvtest.cpp  imagesource_combine.cpp  imagesource_combine.h  imagesource_deflatten.cpp  imagesource_deflatten.h  imagesource_extractchannel.cpp  imagesource_extractchannel.h  (+18 more)
gfx/: Makefile.am  chain1.cpp  chain2.cpp  cmyk.cpp  grey.cpp  hourglass.cpp  logo.cpp  logo.xcf  profile.cpp  rgb.cpp  sigma.cpp
miscwidgets/: livedisplaycheck.cpp  livedisplaycheck.h  uitab.cpp  uitab.h
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  es.po  fr.po  ja.po  pt_BR.po  ru.po
